# college-ml-lab

./: 10_prepare_features_v2.py  10_prepare_features_v3.py  11_xgboost_model_v2.py  11_xgboost_model_v3.py  12_final_summary.py  13_convert_to_csv.py  1_preprocess_data.py  2_transform_queries.py  3_analyze_transformed_data.py  4_prepare_features.py  5_baseline_model.py  6_random_forest_model.py  7_xgboost_model.py  8_compare_models.py  9_analyze_table_column_usage.py  README.md  pyproject.toml
report/: experiment_report.md  project_progress.md
